# neopoligen

./: .gitignore  LICENSE  Makefile.toml  README.md  README.neo  solo-test-cli  start-cli-dev  start-tauri-dev  version.json
cli/: Cargo.toml  README.neo  build-and-run  build-and-run-dev  index.html  make_flamegraph  rustc-ice-2024-05-31T14_55_14-18531.txt  rustc-ice-2024-05-31T14_55_14-18532.txt  rustc-ice-2024-05-31T14_55_14-18558.txt  rustc-ice-2024-05-31T14_55_14-18563.txt  rustc-ice-2024-05-31T14_55_20-18602.txt  rustc-ice-2024-05-31T14_55_20-18603.txt  rustc-ice-2024-05-31T14_55_21-18633.txt  rustc-ice-2024-05-31T14_55_21-18634.txt  rustc-ice-2024-05-31T14_55_23-18710.txt  rustc-ice-2024-05-31T14_55_23-18711.txt  rustc-ice-2024-05-31T14_55_24-18741.txt  rustc-ice-2024-05-31T14_55_24-18742.txt  sed_update  start-dev-test-build  start-dev-test-run  start-solo-test  start-test  sync-templates-for-tauri  todo-error.txt
cli/_archive/benches/: basic.rs
cli/_archive/src/: lib.rs
cli/_archive/tests/: filtered_pages_alpha.rs  folder_menu_tests.rs  link_or_title.rs  page_children.rs  page_id_menus.rs
cli/bench-timing/: make_report.py
cli/benches/: basic.rs
cli/docs-site/admin/: config.json
cli/docs-site/content/: cname.neo  home-page.neo  todo.neo  why-i-built-neopoligen.neo
cli/docs-site/docs/: index.html
cli/docs-site/z_archive/: README.neo  config.json
cli/example-site/: config.json
cli/example-site/admin/: config.json
cli/example-site/configuration/: domain.txt  input-date-formats.txt  theme.txt
cli/example-site/content/: color-picker.neo  error-page.neo  home-page.neo  misc.neo  scratch-page.neo  second-page.neo  span-types.neo  template-macros.neo  template-tests.neo  text-file-test.neo  the-five-types-of-files-i-use.neo  tmp-page.neo  to-document.neo  todo.neo  vidoes-to-make.neo
cli/example-site/content_holding_v2/: span-types.neo
cli/example-site/offline/: README.neo
cli/example-site/scripts/: hello-world.js
cli/example-site/source/: home-page.neo  scratch-page.neo  todo.neo
cli/helpers/: do-dev-test-build  do-dev-test-run  do-dev-test-run-cli  do-solo-test  sync-and-reload-templates-for-tauri
cli/src/: lib.rs
cli/src/ast/: mocks.rs  mod.rs
cli/src/ast_v39/: mod.rs
cli/src/block/: mod.rs
cli/src/block_v39/: mod.rs
cli/src/build_issue/: mod.rs
cli/src/builder/: mocks.rs  mod.rs  new.rs  object.rs
cli/src/builder_v39/: mocks.rs  mod.rs  object.rs
cli/src/cache_object/: mod.rs
cli/src/child/: mod.rs
cli/src/collection/: empty.rs  mod.rs  new_from_files_and_folders.rs  new_from_tags.rs
cli/src/config/: mod.rs  new.rs
cli/src/config_folders/: mod.rs
cli/src/config_section_categories/: mod.rs
cli/src/engine_config/: mod.rs
cli/src/error/: mod.rs
cli/src/error_templates/: _todo.neoj  genericerrorwithsourcepath.neoj  parsererror.neoj  themetesterror.neoj
cli/src/feed/: mod.rs
cli/src/file_set/: mod.rs  new.rs
cli/src/file_watcher/: mod.rs
cli/src/folder_menu_item/: mod.rs
cli/src/helpers/: get_folders_in_folder.rs  make_parent_folder.rs  mod.rs
cli/src/image/: mocks.rs  mod.rs
cli/src/list/: mod.rs
cli/src/list_item/: mod.rs
cli/src/menu_item/: mod.rs
cli/src/mp3/: mod.rs
cli/src/nav_id/: mod.rs
cli/src/nav_item/: mod.rs
cli/src/nav_items/: mod.rs  new_from_files_and_folders.rs
cli/tests/: integration.rs  mod.rs  page_title.rs  site_folder_menu_set_open_closed.rs  site_link_or_titile.rs  site_page_href.rs  site_page_href_title.rs  site_page_ids.rs  site_page_main_body.rs  site_page_output_path.rs  site_page_path_parts.rs  site_page_place_section.rs  site_page_source_path.rs  site_page_status.rs  site_page_template.rs  site_page_title.rs  site_page_type.rs
cli/tests_to_readd/: integration.rs  site_page_href.rs  site_page_href_title.rs  site_page_template.rs  site_page_title.rs  site_page_type.rs
cli/theme-builder/: _README.neo
tauri/: Cargo.toml  README.neo  do_build  make_sidecar  tauri.conf-aarch64-apple-darwin.json  tauri.conf-x86_64-apple-darwin.json  tauri.conf-x86_64-pc-windows-msvc.json  tauri.conf-x86_64-unknown-linux-gnu.json  tauri.conf.json
tauri/helpers/: run-before-dev
tauri/src/: main.rs
(+3326 files in other folders)
