[package]
name = "neopoligengine"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
divan = "0.1.13"

[lib]
doctest = false

#[[bench]]
#name = "basic"
#harness = false

[dependencies]
axum = "0.7.5"
minijinja = { version = "2.0.1", features = ["loader", "custom_syntax", "json"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
notify-debouncer-mini = "0.4.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
syntect = "5.2.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower-livereload = "0.9.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
walkdir = "2.4.0"
dirs = "5.0.1"

