[package]
name = "neopoligengine"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
divan = "0.1.13"

[lib]
doctest = false

#[[bench]]
#name = "basic"
#harness = false

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
fontdb = "0.17.0"
fs_extra = "1.3.0"
html-escape = "0.2.13"
image = "0.24.7"
itertools = "0.13.0"
minijinja = { version = "2.0.1", features = ["debug", "loader", "custom_syntax", "json"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-full = "0.3.1"
regex = "1.10.4"
resvg = "0.41.0"
rimage = "0.10.3"
rusqlite = "0.31.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sha256 = "1.5.0"
syntect = "5.2.0"
tiny-skia = "0.11.4"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower-livereload = "0.9.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
usvg = "0.41.0"
walkdir = "2.4.0"
xmp_toolkit = "1.7.3"


